--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,15 +1,14 @@
 # C-b 和 VIM 冲突，修改 Prefix 组合键为 Control-Z，按键距离近
 set -g prefix C-s
 
-set -g base-index         1     # 窗口编号从 1 开始计数
-set -g display-panes-time 10000 # PREFIX-Q 显示编号的驻留时长，单位 ms
-set -g mouse              on    # 开启鼠标
-set -g pane-base-index    1     # 窗格编号从 1 开始计数
-set -g renumber-windows   on    # 关掉某个窗口后，编号重排
+set  -g base-index         1     # 窗口编号从 1 开始计数
+set  -g pane-base-index    1     # 窗格编号从 1 开始计数
+set  -g display-panes-time 10000 # PREFIX-Q 显示编号的驻留时长，单位 ms
+set  -g mouse              on    # 开启鼠标
+set  -g renumber-windows   on    # 关掉某个窗口后，编号重排
 
-setw -g allow-rename      off   # 禁止活动进程修改窗口名
-setw -g automatic-rename  off   # 禁止自动命名新窗口
-setw -g mode-keys         vi    # 进入复制模式的时候使用 vi 键位（默认是 EMACS）
+setw -g allow-rename       off   # 禁止活动进程修改窗口名
+setw -g mode-keys          vi    # 进入复制模式的时候使用 vi 键位（默认是 EMACS）
 
 # -----------------------------------------------------------------------------
 # 使用插件 - via tpm
@@ -20,13 +19,13 @@ setw -g mode-keys         vi    # 进入复制模式的时候使用 vi 键位（
 setenv -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins'
 
 # 推荐的插件（请去每个插件的仓库下读一读使用教程）
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'https://hub.fastgit.org/seebi/tmux-colors-solarized.git'
+set -g @plugin 'https://hub.fastgit.org/tmux-plugins/tmux-pain-control.git'
+set -g @plugin 'https://hub.fastgit.org/tmux-plugins/tmux-prefix-highlight.git'
+set -g @plugin 'https://hub.fastgit.org/tmux-plugins/tmux-resurrect.git'
+set -g @plugin 'https://hub.fastgit.org/tmux-plugins/tmux-sensible.git'
+set -g @plugin 'https://hub.fastgit.org/tmux-plugins/tmux-yank.git'
+set -g @plugin 'https://hub.fastgit.org/tmux-plugins/tpm.git'
 
 # tmux-resurrect
 set -g @resurrect-dir '~/.tmux/resurrect'
@@ -38,7 +37,3 @@ set -g @prefix_highlight_copy_mode_attr 'fg=white,bg=blue'
 
 # 初始化 TPM 插件管理器 (放在配置文件的最后)
 run '~/.tmux/plugins/tpm/tpm'
-
-# Start windows and panes at 1, not 0
-set -g base-index 1
-setw -g pane-base-index 1
